[package]
name = "juejin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "type"
path = "src/type.rs"

[[bin]]
name = "fib"
path = "src/fib.rs"

[[bin]]
name = "transpose"
path = "src/transpose.rs"


[[bin]]
name = "sparsearray"
path = "src/sparsearray.rs"